[package]
name = "compiler"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "brainfuck"
path = "./src/brainfuck.rs"

[[bin]]
name = "server"
path = "./src/main.rs"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.104"
tempfile = "3.7.0"
wait-timeout = "0.2.0"
